# cpp-discord-bot

./: .gitignore  CMakeLists.txt  README.md  flake.nix  testnumbers.txt
cmake/: addSqlite3.cmake
data/: settings.example.json  unicodeToNumber.json
include/: app.hpp  counting_game.hpp  database.hpp  get_harware_stats.hpp  global_settings.hpp  load_operators.hpp  player.hpp  roll_selector.hpp  server.hpp  server_settings.hpp  settings.hpp  string_calculator.hpp  util.hpp  voice_handler.hpp
src/: app.cpp  counting_game.cpp  database.cpp  get_harware_stats.cpp  global_settings.cpp  main.cpp  player.cpp  roll_selector.cpp  server.cpp  server_settings.cpp  settings.cpp  string_calculator.cpp  util.cpp  voice_handler.cpp
